crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.invalid-mutate-global-in-render-helper-phi-return-prop/error.txt
Found 1 error:

Error: This value cannot be modified

Modifying a variable defined outside a component or hook is not allowed. Consider using an effect.

error.invalid-mutate-global-in-render-helper-phi-return-prop.ts:12:4
  10 |     // called during render, and thus it's unsafe to mutate globals or call
  11 |     // other impure code.
> 12 |     global.property = true;
     |     ^^^^^^ value cannot be modified
  13 |     return <Item item={item} value={rand} />;
  14 |   };
  15 |   return <ItemList renderItem={renderItem} />;
